# slingscold

./: CMakeLists.txt  INSTALL  README  README.md  Slingscold.vala  build.sh  slingshot.vala
.bzr/branch/: last-revision  tags
.bzr/checkout/: dirstate
.bzr/repository/: pack-names
backend/: GMenuEntries.vala
data/: slingscold.desktop
debian/: README.Debian  README.source  changelog  control  copyright  postinst  rules
frontend/: Color.vala  Utilities.vala
frontend/widgets/: AppItem.vala  CompositedWindow.vala  Indicators.vala  Searchbar.vala
usr/share/applications/: slingscold.desktop
